[package]
name = "sgx-quote-verify-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ra-verify = { git = "https://github.com/fleek-network/fleek-sgx.git", branch = "main" }
serde_json = "1"
anyhow = "1"
x509-cert = { version = "0.2.5" }
hex = "0.4"
urlencoding = "2.1"
chrono = "0.4"
console_error_panic_hook = "0.1.7"


# patch dependency to enable js feature for wasm support
getrandom = { version = "0.2", features = ["js"] }
